--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         />
       </div>
     </div>
-    <audio loop class="my-song" src="Home.mp3" preload="auto"></audio>
+    <audio loop class="my-song" src="once_in_paris.mp3" preload="auto"></audio>
     <script src="script.js"></script>
 </body>
 </html>
