--- a/index.html
+++ b/index.html
@@ -7,26 +7,26 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  div class="player">
-      <div class="record">
-        <div class="label"></div>
-      </div>
-      <div class="tone-arm">
-        <div class="control"></div>
-      </div>
-      <button class="btn"></button>
-      <div class="slider-container">
-        <input
-          type="range"
-          class="slider"
-          min="0"
-          max="1"
-          step="0.1"
-          value="0.7"
-        />
-      </div>
+  <div class="player">
+    <div class="record">
+      <div class="label"></div>
     </div>
-    <audio loop class="my-song" src="once_in_paris.mp3" preload="auto"></audio>
-    <script src="script.js"></script>
+    <div class="tone-arm">
+      <div class="control"></div>
+    </div>
+    <button class="btn"></button>
+    <div class="slider-container">
+      <input
+        type="range"
+        class="slider"
+        min="0"
+        max="1"
+        step="0.1"
+        value="0.7"
+      />
+    </div>
+  </div>
+  <audio loop class="my-song" src="once_in_paris.mp3" preload="auto"></audio>
+  <script src="script.js"></script>
 </body>
 </html>
